@@ -128,6 +128,7 @@ else {
 		$sched->{'before'} = $in{'before_def'} ? undef : $in{'before'};
 		$sched->{'after'} = $in{'after_def'} ? undef : $in{'after'};
 		}
+	$sched->{'exclude'} = join("\t", split(/\r?\n/, $in{'exclude'}));
 	if ($cbmode != 1 && !$sched->{'owner'}) {
 		# Record the owner of this scheduled backup, which controls
 		# who it runs as
