@@ -27,6 +27,7 @@ if ($config{'backup_dest'}) {
 			  'purge' => $config{'backup_purge'},
 			  'before' => $config{'backup_before'},
 			  'after' => $config{'backup_after'},
+			  'exclude' => $config{'backup_exclude'},
 			 );
 	local @bf;
 	foreach $f (&get_available_backup_features(), &list_backup_plugins()) {
@@ -105,6 +106,7 @@ if ($backup->{'id'} == 1) {
 	$config{'backup_purge'} = $backup->{'purge'};
 	$config{'backup_before'} = $backup->{'before'};
 	$config{'backup_after'} = $backup->{'after'};
+	$config{'backup_exclude'} = $backup->{'exclude'};
 	local @bf = split(/\s+/, $backup->{'features'});
 	foreach $f (&get_available_backup_features(), &list_backup_plugins()) {
 		$config{'backup_feature_'.$f} = &indexof($f, @bf) >= 0 ? 1 : 0;
