@@ -1,0 +1,8 @@
+<header>Files to exclude from each domain</header>
+
+This field allows you to enter the relative paths to files under each
+virtual server's home directory to exclude from this backup. For example, to
+skip Webalizer statistics, you could enter <tt>public_html/stats</tt>. <p>
+
+<footer>
+
