@@ -2105,6 +2105,7 @@ backup_vstyles=Third-party content styles
 backup_vscheds=Scheduled Virtualmin backups
 backup_vchroot=FTP directory restrictions
 backup_virtualmin=Virtualmin settings to also backup
+backup_exclude=Files to exclude from each domain
 backup_webmin=Backing up Webmin ACL files ..
 backup_webminfailed=.. tar failed : $1
 backup_esamelock=A backup to the same destination is already running with PID $1
