@@ -1209,3 +1209,4 @@ The MySQL default collation order for new databases can now be set on the databa
 Added the Website Redirects page, for easily creating aliases from URL paths to directories, and redirects from URL paths to other websites.
 Added a 'status' section to the 'info' API command, to get the collected status of servers like Apache and BIND.
 When lowering a virtual server's disk quota below the current usage a warning is displayed asking the user if he really wants to do that.
+Added a field to the backup form as the backup-domain API command to exclude some files from each domain's backup.
